--- a/css/fancy-robot.css
+++ b/css/fancy-robot.css
@@ -19,7 +19,7 @@
     border-radius: 10%;
     border: 10px dotted; 
     position:relative;
-    background-color: #C4E0E5;
+    background-color: #583c2a;
 }
 
 .robot-eye-left {
@@ -28,7 +28,28 @@
     background-color: tomato;
     margin:18%;
     border-radius: 20%; 
+
+    animation-name: left-eye;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function:ease ;
+    
 }
+
+@keyframes left-eye {
+  0% { 
+    transform:scale(.2);
+   ;
+ }
+  50%{
+    transform: rotate(90deg);
+  }
+
+}
+
+
+
+
 
 .robot-eye-right {
     width:60px;
@@ -42,8 +63,21 @@
     top: 30%;
     left: 65%;
     
+    animation-name: right-eye;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
 
 }
+
+@keyframes right-eye {
+  to{ 
+  transform: scaleY(-98%);
+ }
+
+  
+
+}
+
 
 .robot-ear-left {
 
@@ -58,7 +92,17 @@
       position: absolute;
       bottom:50%;
       right: 35%;
+
+      animation:left-ear 3s ease-in 1s infinite;
   
+}
+
+@keyframes left-ear{
+  to{
+    transform: rotate(180deg);
+    transform: scale(1.5);
+    
+  }
 }
 
 
@@ -74,6 +118,26 @@
   position: absolute;
   bottom: 50%;
   left:35%;
+
+  animation: right-ear 5s ease-in-out 2s infinite;
+}
+
+@keyframes right-ear {
+  25%{ 
+    transform: rotateX(90deg);
+    border: 30px solid rgb(76, 14, 170);
+    border-right-color: transparent;
+    border-left-color: transparent ;
+  }
+
+  100%{
+    transform: scale(.5);
+    transform: rotateY(180deg);
+    border: 30px solid rgb(76, 14, 170);
+    border-right-color: transparent;
+    border-left-color: transparent ;
+  }
+  
 }
 
 
@@ -83,10 +147,28 @@
   left: 50%;
   transform: translateX(-50%);
 
-  width: 30px;   
-  height: 30px;  
-  background: orange;
+  width: 0;
+  height: 0;
+  border-left: 25px solid transparent;
+  border-right: 25px solid transparent;
+  border-bottom: 55px solid red;
+      
+  transition-delay: 0.5s;
+  transition-duration: 2s;
+  /* transition-timing-function:linear ; */
 
+
+
+
+}
+
+.robot-nose:hover {
+  border-left: 25px solid transparent;
+  border-right: 25px solid transparent;
+  border-bottom: 55px solid rgb(255, 255, 0);
+  box-shadow:0px 0px 40px 0px rgb(234, 10, 10);
+
+  
 
 }
    
@@ -102,17 +184,30 @@
 
   position: absolute;
   top: 200px; 
-  left: 50%;
-  transform: translateX(-50%);
+  left: 20%;
+  /* transform: translateX(-50%); */
+
+  animation-name:robot-mouth;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
 }
 
+@keyframes robot-mouth {
+  100%{
+    transform: scaleY(-98%)
+
+  }
+}
 .robot-tooth {
   width: 15px;
   height: 25px;
   background-color: bisque;
   border: 1px solid black;
   border-radius: 3px;
+
+ 
 }
+
 
 
 .robot-hair-style {
@@ -136,13 +231,47 @@
   height: 60%;
   background-color: #a78a70;
   
+  animation-name:hair-one;
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes hair-one{
+  100%{
+  width: 0;
+  height: 0;
+  border-left: 25px solid transparent;
+  border-right: 25px solid transparent;
+  border-bottom: 55px solid #ffdd00;
+    
+  }
+  
 }
 
 .robot-hair-two {
   width:50px;
   height: 80%;
   background-color: #3ea756;
-  /* how can I change the transparency of this element */
+  
+  animation: hair-two 5s ease-out 0s infinite ;
+  animation-fill-mode: both;
+}
+
+@keyframes hair-two {
+  25%{
+    background-color: aqua;
+  }
+  50%{
+    background-color: #ffdd00;
+
+  }
+  75%{
+    background-color: rgb(109, 8, 225);
+  }
+  100%{
+    background-color: rgb(249, 16, 175);
+    transform: skew(20deg);
+  }
 }
 
 .robot-hair-three {
@@ -152,4 +281,15 @@
   background-size: cover;
   background-position: center;
 
+  animation: third-hair 3s ease-in-out 2s infinite;
+
+}
+
+@keyframes third-hair{
+  0%, 100%{
+    transform: translateY(0px)}
+    
+  50%{
+    transform: translateY(-50px);
+  }
 }
